--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px">Trailer Tracker</h1>
+            <a href="/"><h1 class="remove-bottom" style="margin-top: 40px">Trailer Tracker</h1></a>
 			<hr />
 		</div>
         <div class="three columns offset-by-five">
@@ -54,6 +54,12 @@
         <div class="three columns">
             <a href="#" class="button">Discuss</a>
         </div>
+		<div class="sixteen columns" id="map" style="height: 40em; background-color: green;">
+		</div>
+        <footer class="sixteen columns">
+            <hr />
+            <p>Read more.</p>
+        </footer>
 	</div><!-- container -->
 
 
