--- a/static/index.html
+++ b/static/index.html
@@ -44,8 +44,11 @@
 	<!-- Delete everything in this .container and get started on your own site! -->
 
 	<div class="container">
+        <header>
+            <a href="/" class="fifteen columns"><h1 class="remove-bottom">Trailer Tracker</h1></a>
+            <a href="/login" class="login one columns">Log in</a>
+        </header>
 		<div class="sixteen columns">
-            <a href="/"><h1 class="remove-bottom" style="margin-top: 40px">Trailer Tracker</h1></a>
 			<hr />
 		</div>
         <div class="three columns offset-by-five">
