--- a/static/index.html
+++ b/static/index.html
@@ -53,10 +53,13 @@
 			<hr />
         </header>
         <div class="actions">
-            <div class="three columns offset-by-five">
-                <a href="#" class="button">Add your trailer</a>
+            <div class="one-third column">
+                <a href="/trailers" class="button">Add a trailer</a>
             </div>
-            <div class="three columns">
+            <div class="one-third column">
+                <a href="/symptoms" class="button">Report symptoms</a>
+            </div>
+            <div class="one-third column">
                 <a href="#" class="button">Discuss</a>
             </div>
         </div>
