--- a/static/index.html
+++ b/static/index.html
@@ -46,25 +46,23 @@
 	<div class="container">
         <header class="sixteen columns">
             <a href="/"><h1 class="remove-bottom">Trailer Tracker</h1></a>
-            <a href="/login" class="login button">Log in</a>
-            <form action="/logout" method="post">
-                <button class="login remove-bottom" type="submit">Log out</button>
-            </form>
 			<hr />
         </header>
-        <div class="actions">
-            <div class="one-third column">
-                <a href="/trailers" class="button">Add a trailer</a>
+        <div id="body">
+            <div class="actions">
+                <div class="one-third column">
+                    <a href="/trailers" class="button">Add a trailer</a>
+                </div>
+                <div class="one-third column">
+                    <a href="/symptoms" class="button">Report symptoms</a>
+                </div>
+                <div class="one-third column">
+                    <a href="#" class="button">Discuss</a>
+                </div>
             </div>
-            <div class="one-third column">
-                <a href="/symptoms" class="button">Report symptoms</a>
-            </div>
-            <div class="one-third column">
-                <a href="#" class="button">Discuss</a>
+            <div class="sixteen columns" id="map" style="height: 40em; background-color: green;">
             </div>
         </div>
-		<div class="sixteen columns" id="map" style="height: 40em; background-color: green;">
-		</div>
         <footer class="sixteen columns">
             <hr />
             <p>Read more.</p>
