--- a/static/_base.html
+++ b/static/_base.html
@@ -46,6 +46,9 @@
 	<div class="container">
         <header class="sixteen columns">
             <a href="/"><h1 class="remove-bottom">Trailer Tracker</h1></a>
+            <form action="/logout" method="post" class="account"><button type="submit">Log out</button></form>
+            <a href="/login" class="account button">Log in</a>
+            <a href="/me" class="account button">Account</a>
 			<hr />
         </header>
         <div id="body"></div>
